--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "@tailwindcss/cli": "^4.1.18",
     "tailwindcss": "^4.1.18"
   },"scripts": {
-  "tailwind:dev": "npx @tailwindcss/cli -i ./src/css/input.css -o ./src/css/output.css --watch",
-  "tailwind:build": "npx @tailwindcss/cli -i ./src/css/input.css -o ./src/css/output.css --minify"
+  "tailwind:dev": "npx @tailwindcss/cli -i ./docs/css/input.css -o ./docs/css/output.css --watch",
+  "tailwind:build": "npx @tailwindcss/cli -i ./docs/css/input.css -o ./docs/css/output.css --minify"
 }
 }
